--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "jgmdev/pquery",
-    "description": "A proxy between PHP and jQuery.",
+    "name": "jgmdev/puente",
+    "description": "A proxy or bridge between PHP and jQuery.",
     "license": "MIT",
     "authors": [
         {
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "PQuery\\": "lib/"
+            "Puente\\": "lib/"
         }
     }
 }
